# aws-ec2-socks-proxy

./: .envrc  .gitignore  CM.py  DEL.PY  LICENSE.md  README.md  RUN.py  Readme.txt  SSH.py  START.py  STATUS.py  STOP.py  amiImages.py  config.ini_template  describeEC2Instances.sh  ec2Instances.py  env.py  env.py_template  env.sh_template  init.sh  loggerFactory.py  printEnv.sh  provision_shadowsocks.sh  publicKeys.py  pyproject.toml  requirements.txt  securityGroups.py  setAWSSOCKS_IP.sh  setAWSSOCKS_PUBLIC_KEY_NAME_EXISTS.sh  setAWSSOCKS_SECURITY_GROUP_ID.sh  start.sh  startTunnelAndFirefox.sh  tearDown.sh  wireguard-setup-script.sh
configs-template/: config-brazil.ini  config-france.ini  config-ireland.ini  config-italy.ini  config-spain.ini  config-suisse.ini  config-uk.ini  config-us.ini
