[project]
name = "bbc-awssocks"
version = "0.1.0"
description = "SOCKSv5 proxy using an AWS EC2 instance as relay server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3==1.40.2",
    "botocore==1.40.2",
    "configparser==7.2.0",
    "jmespath==1.0.1",
    "python-dateutil==2.9.0.post0",
    "s3transfer==0.13.1",
    "six==1.17.0",
    "urllib3==2.6.3",
]
